--- a/IISReports/Views/Home/Index.cshtml
+++ b/IISReports/Views/Home/Index.cshtml
@@ -103,7 +103,7 @@
 </div>
 <div id="container" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
 <div id="summary data">
-    <p>There were a total number of <span id="totalvists"></span> visits for this period.</p>
+    <p>There were a total number of <span id="totalvists"></span> hits for this period.</p>
     <ul id="agent-breakdown">
         
     </ul>
